<resources>
    <string name="app_name">Food management</string>

    <string name="text1">Where to eat?</string>

    <string name="text2">List</string>
    <string name="text4">Profile</string>

    <string name="text5">List of Restaurants</string>

    <string name="text3">Register</string>
    <string name="text6">Name</string>
    <string name="text7">Address</string>
    <string name="text8">Phone Number</string>
    <string name="text9">E-mail</string>

    <string name="button1">REGISTER</string>
    <string name="button2">CHANGE</string>

    <string name="button3">EDIT</string>
    <string name="button4">LOG OUT</string>

    <string name="text10">Name:</string>
    <string name="text11">Address:</string>
    <string name="text12">Phone Number:</string>
    <string name="text13">E-mail:</string>
    <string name="text14">$</string>

    <string name="text15">Details</string>
    <string name="text16">Price:</string>
    <string name="text17">City:</string>
    <string name="text18">State:</string>
    <string name="text19">Area:</string>
    <string name="text20">Postal Code:</string>
    <string name="text21">Country:</string>
    <string name="text22">Reserve:</string>
    <string name="text23">Mobile Reserve:</string>

    <string name="text24">Edit Profile</string>
    <string name="text25">Search</string>

    <string name="call">Call</string>
    <string name="map">Map</string>
    <string name="fav">Fav</string>
    <string name="prof">Profile</string>

</resources>