<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.projekt.fragments.AddFragment"
        android:label="@string/text4"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/informationFragment"
        android:name="com.example.projekt.fragments.InformationFragment"
        android:label="@string/text5"
        tools:layout="@layout/fragment_information" />
    <fragment
        android:id="@+id/detalisFragment"
        android:name="com.example.projekt.fragments.DetalisFragment"
        android:label="fragment_detalis"
        tools:layout="@layout/fragment_detalis" />
    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.projekt.fragments.ListFragment"
        android:label="@string/text3"
        tools:layout="@layout/fragment_list" />
</navigation>